# firmament

./: .gitignore  .pre-commit-config.yaml  Makefile  notes.md  pyproject.toml
firmament/: checkout.py  cli.py  config.py  constants.py  daemon.py  database.py  datastore.py  firmament.proto  firmament_pb2.py  firmament_pb2.pyi  server.py  syncer.py  types.py
firmament/backends/: __init__.py  base.py  local.py  rclone_s3.py  s3.py
firmament/encryptors/: aes.py  base.py  null.py
firmament/operators/: __init__.py  base.py  content_upload.py  download_once_cleanup.py  fileversion_sync.py  local_create.py  local_hasher.py  local_scanner.py  local_version_creation.py
firmament/tui/: __init__.py  app.py  tree.py
tests/: conftest.py  test_datastore.py  test_encryptors.py  test_local_backend.py  test_rclone_s3_backend.py
