[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "firmament"
version = "1.0.0"
description = "Locally-sparse, multi-remote file archiving and sharing"
authors = [{ name = "Andrew Godwin", email = "andrew@aeracode.org" }]
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "boto3>=1.28.0",
    "protobuf~=6.33",
    "pydantic~=2.12.0",
    "pyyaml~=6.0",
    "sqlalchemy~=2.0.0",
    "textual>=0.47.0",
]

[project.scripts]
firmament = "firmament.cli:main"

[project.optional-dependencies]
dev = ["black", "pre-commit", "pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["firmament*"]
